--- a/ProyectoIPC2/pom.xml
+++ b/ProyectoIPC2/pom.xml
@@ -35,7 +35,11 @@
             <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
